# protoClojure

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: RESULTS.md  actor-bench.sh  actor-fanout.clj  actor-mpmc.clj  actor-mpsc.clj  actor-throughput.clj  bench.sh  factorial-100.clj  fib.clj  reduce-list.clj  sum-loop.clj  sum-squares.clj  tak.clj
docs/: DESIGN.md  INTEROP.md  LANGUAGE.md  ROADMAP.md  STATUS.md  TUTORIAL.md
docs/superpowers/specs/: 2026-06-14-clojure-core-v0.1.md  2026-06-14-engineering-principles.md  2026-06-14-foreign-dispatch.md  2026-06-14-phase-1-bootstrap-interpreter.md  2026-06-14-protocore-call-convention.md
docs/tutorial/: 01-introduction.md  02-for-the-python-or-javascript-developer.md  03-for-the-clojure-developer.md  04-data-structures.md  05-functions-and-closures.md  06-state-and-atoms.md  07-protocols-and-multimethods.md  08-modules.md  09-interop.md  10-repl.md  11-macros.md  12-worked-example.md  13-actors.md
examples/: 02-factorial.clj  03-closures.clj  04-higher-order.clj  05-multi-arity.clj  06-floats-and-vectors.clj  07-maps-and-kw.clj  08-dual-call-convention.clj  09-strings.clj  10-atoms.clj  11-futures.clj  12-watch-promise-pmap.clj
headers/: protoClojure.h
src/: main.cpp
src/compiler/: Compiler.cpp  Compiler.h
src/reader/: Lexer.cpp  Lexer.h  Reader.cpp  Reader.h  Token.h
src/repl/: Repl.cpp  Repl.h
src/runtime/: ActorScheduler.cpp  ActorScheduler.h  BytecodeModule.cpp  BytecodeModule.h  ExecutionEngine.cpp  ExecutionEngine.h  Opcodes.h  Primitives.cpp  Primitives.h
tests/: CMakeLists.txt
tests/conformance/: run.sh
tests/conformance/00-binary/: version-flag.clj
tests/conformance/01-literals/: hello-world.clj
tests/conformance/02-special-forms/: def-and-var-ref.clj  do-sequence.clj  if-else-branch.clj  if-then-branch.clj
tests/conformance/03-arithmetic/: comparison.clj  inc-dec.clj  multiplication.clj  str-concat.clj  sum.clj
tests/conformance/04-functions/: defn-square.clj  defn-two-args.clj  let-binding.clj  let-multiple-bindings.clj
tests/conformance/05-recursion/: factorial.clj  sum-to-n.clj
tests/conformance/06-closures/: closure-with-loop.clj  higher-order-compose.clj  immediate-invoke.clj  single-capture.clj  triple-nested.clj  two-captures.clj
tests/conformance/07-variadic/: empty-rest.clj  rest-count.clj  single-rest.clj
tests/conformance/08-collections/: count-empty.clj  first-rest-cons.clj  list-roundtrip.clj  reverse-list.clj
tests/conformance/09-higher-order/: apply-plus.clj  closure-into-map.clj  filter-gt.clj  map-inc.clj  reduce-sum.clj
tests/conformance/10-multi-arity/: anonymous-fn.clj  multi-arity-reduce.clj  pick-arity.clj
tests/conformance/11-sugar-forms/: and-short-circuits.clj  and-truthy.clj  cond-fallthrough.clj  cond-middle-clause.clj  or-all-falsy.clj  or-first-truthy.clj  when-no.clj  when-not-yes.clj  when-yes.clj
tests/conformance/12-literals/: booleans-nil.clj  keyword.clj
tests/conformance/13-floats/: float-comparison.clj  float-literal.clj  integer-division.clj  mixed-arith.clj
tests/conformance/14-vectors/: empty-vector.clj  higher-order-over-vector.clj  nth-and-count.clj  predicates.clj  vec-from-list.clj  vector-literal.clj
tests/conformance/15-bigint/: factorial-21.clj  factorial-30.clj  large-add.clj
tests/conformance/16-maps/: assoc-multi.clj  contains.clj  empty.clj  get-default.clj  literal.clj  predicates.clj
tests/conformance/17-kw-destructuring/: closure-captures-kw.clj  missing-keys-nil.clj  multi-keys.clj  positional-and-kw.clj
tests/conformance/18-kw-callsite/: assoc-still-works.clj  get-default-still-works.clj  multiple-kv-pairs.clj  non-kw-callee-unchanged.clj  trailing-kv-pair.clj
tests/conformance/19-or-and-as/: as-empty.clj  as-snapshot.clj  or-default-overridden.clj  or-default.clj  or-plus-as.clj
tests/conformance/20-strings/: blank.clj  case.clj  count-string.clj  index-of.clj  join.clj  pipeline.clj  predicate.clj  replace.clj  reverse.clj  split.clj  starts-ends-includes.clj  subs.clj  trim.clj
tests/conformance/21-atoms/: atom-predicate.clj  closure-with-atom.clj  compare-and-set.clj  create-deref.clj  deref-macro.clj  print-form.clj  reset-bang.clj  swap-bang-extra-args.clj  swap-bang.clj  swap-into-map.clj
tests/conformance/22-futures/: basic-future.clj  clean-exit-without-deref.clj  computation-in-thread.clj  future-with-atom.clj  manual-parallel-via-futures.clj  pmap-basic.clj  pmap-parallel.clj  predicates.clj  print-realised.clj  realized-after-deref.clj  three-futures.clj
tests/conformance/23-watches/: add-watch-fires.clj  remove-watch.clj  two-keys.clj
tests/conformance/24-promises/: deliver-deref.clj  predicate.clj  realized.clj  single-shot.clj
tests/conformance/25-actors/: actor-predicate.clj  concurrent-sends-no-race.clj  create-and-deref.clj  many-actors.clj  print-form.clj  priorities.clj  send-inc.clj  send-with-extra-args.clj
tests/unit/: CMakeLists.txt  test_lexer.cpp  test_reader.cpp
